[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webpy-framework"
version = "1.2.1"
description = "Easy-to-use Python web framework built on top of Flask"
readme = "README.md"
authors = [{ name = "Carl Furtado", email = "carlzfurtado@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: HTML",
    "Operating System :: OS Independent"
]
keywords = ["framework", "flask", "web"]
dependencies = [
	"flask >= 2.2.2",
	"dill >= 0.3.5.1",
	"python-minifier >= 2.8.0",
	"dill >= 0.3.6",
	"flask-session >= 0.5.0",
	"flask-sqlalchemy >= 3.0.0",
	"py-domapi >= 1.0.0",
	"pyx-pysite >= 1.0.3",
	"marko >= 1.3.0"
]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/User0332/pycontext"

[project.scripts]
webpy = "webpy.__main__:main"
webpy-framework = "webpy.__main__:main"